--- a/gnuboard5/theme/basic/skin/outlogin/basic/style.css
+++ b/gnuboard5/theme/basic/skin/outlogin/basic/style.css
@@ -10,9 +10,9 @@
 #ol_before {}
 #ol_before:after {display:block;visibility:hidden;clear:both;content:""}
 #ol_before .ol_wr{position:relative;border:1px solid #444;margin-bottom:5px;}
-#ol_id {display:block;width:185px;border:1px solid #444;padding:0 10px;height:32px;background: #111;opacity: 0.9;color:#eee}
-#ol_pw {display:block;width:185px;border:1px solid #444;padding:0 10px;border-top:1px solid #444;height:32px;background: #111;opacity: 0.9;color:#eee}
-#ol_submit {position:absolute;top:0;right:0;width:76px;height:64px;background:#111;;border-left:1px solid #444;color:#eee;font-weight:bold;font-size:1.167em}
+#ol_id {display:block;width:185px;border:1px solid #444;padding:0 10px;height:32px;background:rgba(17, 17, 17, 0.9);;color:#eee}
+#ol_pw {display:block;width:185px;border:1px solid #444;padding:0 10px;border-top:1px solid #444;height:32px;background:rgba(17, 17, 17, 0.9);;color:#eee}
+#ol_submit {position:absolute;top:0;right:0;width:76px;height:64px;background:rgba(17, 17, 17, 0.9);;border-left:1px solid #444;color:#eee;font-weight:bold;font-size:1.167em}
 #ol_svc {float:right;line-height:20px}
 #ol_svc a{display:inline-block;color:#ddd;margin:0 5px}
 #ol_auto {float:left;line-height:20px}
@@ -20,7 +20,7 @@
 #ol_auto input {width:13px;height:13px} 
 .ol_auto_wr:after {display:block;visibility:hidden;clear:both;content:""}
 
-#ol_after {background:#111;border: 1px solid #444; border-bottom: 1px solid #444;
+#ol_after {background:rgba(17, 17, 17, 0.9);border: 1px solid #444; border-bottom: 1px solid #444;
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 box-shadow:0 1px 2px rgba(0,0,0,0.1)}
