--- a/gnuboard5/css/default.css
+++ b/gnuboard5/css/default.css
@@ -19,7 +19,7 @@ select {margin:0}
 p {margin:0;padding:0;word-break:break-all}
 hr {display:none}
 pre {overflow-x:scroll;font-size:1.1em}
-a {color:#000;text-decoration:none}
+a {color:#fff;text-decoration:none}
 
 *, :after, :before {
     -webkit-box-sizing: border-box;
