--- a/gnuboard5/css/mobile.css
+++ b/gnuboard5/css/mobile.css
@@ -17,7 +17,7 @@ select {margin:0;background:none}
 p {margin:0;padding:0;word-break:break-all}
 hr {display:none}
 pre {overflow-x:scroll;font-size:1.1em}
-a {color:#000;text-decoration:none}
+a {color:#fff;text-decoration:none}
 ul,li,dl,dt,dd{list-style:none;padding:0;margin:0}
 
 *, :after, :before {
