--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -106,7 +106,7 @@
 #bo_list .txt_expired {color:#ccc}
 #bo_list tbody tr:hover {border-left:2px solid #253dbe}
 
-#bo_cate {background:#111;opacity: 0.9;;padding:7px;margin:10px 0;border:1px solid #444}
+#bo_cate {background:rgba(17, 17, 17, 0.9);;;padding:7px;margin:10px 0;border:1px solid #444}
 #bo_cate a{color:#eee}
 #bo_cate h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_cate ul {zoom:1}
@@ -131,7 +131,7 @@ box-shadow:inset 0 1px 1px rgb(39, 39, 39);
 .bo_fx {margin-bottom:5px;float:right;zoom:1}
 .bo_fx:after {display:block;visibility:hidden;clear:both;content:""}
 .bo_fx ul {margin:0;padding:0;list-style:none}
-#bo_list_total {float:left;line-height:30px;font-size:0.92em;color:#eee;background:#111;opacity: 0.9;;padding:0 10px;border-radius:5px;}
+#bo_list_total {float:left;line-height:30px;font-size:0.92em;color:#eee;background:rgba(17, 17, 17, 0.9);;;padding:0 10px;border-radius:5px;}
 
 .btn_bo_user {float:right;margin:0;padding:0;list-style:none}
 .btn_bo_user li {float:left;margin-left:5px}
@@ -143,7 +143,7 @@ box-shadow:inset 0 1px 1px rgb(39, 39, 39);
 
 .bo_notice .notice_icon{display:inline-block;background:#4158d1;width:25px;line-height:25px;border-radius:5px;font-weight:normal;color:#fff}
 .td_num strong {color:#000}
-.bo_cate_link {display: inline-block;color: #3497d9;height: 20px;font-size:0.92em} /* 글제목줄 분류스타일 */
+.bo_cate_link {display: inline-block;color: #3497d9  !important; ;height: 20px;font-size:0.92em} /* 글제목줄 분류스타일 */
 .bo_tit{display:inline;color:#000;font-weight:bold;}
 .bo_current {color:#e8180c}
 /*#bo_list .profile_img {display:inline-block;margin-right:2px}*/
@@ -161,10 +161,10 @@ box-shadow: inset 0 2px 5px  rgba(255,255,255,0.3);}
 #bo_list .bo_tit .fa-lock{display: inline-block;line-height: 14px;width: 16px;font-size: 0.833em;color: #4f818c;background: #cbe3e8;text-align: center;border-radius: 2px;font-size: 12px;border:1px solid #a2c6ce}
 
 
-#bo_sch {float:left;border:1px solid #444;background:#111;opacity: 0.9;;border-radius:3px}
+#bo_sch {float:left;border:1px solid #444;background:rgba(17, 17, 17, 0.9);;;border-radius:3px}
 #bo_sch:after {display:block;visibility:hidden;clear:both;content:""}
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
-#bo_sch select{border:0;margin:9px 5px ;height:20px;float:left;border-right:1px solid #444;background: #111;opacity: 0.9;color:#eee}
+#bo_sch select{border:0;margin:9px 5px ;height:20px;float:left;border-right:1px solid #444;background:rgba(17, 17, 17, 0.9);;color:#eee}
 #bo_sch .sch_input{height:38px;border:0;padding:0;background-color:transparent;float:left}
 #bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px}
 
@@ -196,7 +196,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 .autosave_del{background:url(./img/close_btn.png) no-repeat 50% 50%;text-indent:-999px;overflow:hidden;height:20px;width:20px;}
 
 /* 게시판 읽기 */
-#bo_v {margin-bottom:20px;padding:20px;background:#111;opacity: 0.9;color:#eee;;box-sizing:border-box}
+#bo_v {margin-bottom:20px;padding:20px;background:rgba(17, 17, 17, 0.9);;color:#eee;;box-sizing:border-box}
 
 #bo_v_table {position:absolute;top:0;right:16px;margin:0;padding:0 5px;height:25px;background:#ff3061;color:#fff;font-weight:bold;line-height:2.2em}
 
@@ -318,7 +318,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_vc .member, #bo_vc .guest, #bo_vc .sv_member, #bo_vc .sv_guest {font-weight:bold}
 .bo_vc_hdinfo{float:right;font-style:italic;color:#eee}
 #bo_vc h1 {position:absolute;font-size:0;line-height:0;overflow:hidden}
-#bo_vc .cmt_contents {padding:15px  ;margin:10px 0 0;background: #111;opacity: 0.9;;border-radius:5px;border: 1px solid #444;line-height:1.8em}
+#bo_vc .cmt_contents {padding:15px  ;margin:10px 0 0;background:rgba(17, 17, 17, 0.9);;;border-radius:5px;border: 1px solid #444;line-height:1.8em}
 #bo_vc p a {text-decoration:underline}
 #bo_vc p a.s_cmt {text-decoration:underline;color:#ed6479}
 #bo_vc_empty {margin:0;padding:80px 0 !important;color:#eee;text-align:center}
