--- a/gnuboard5/skin/new/basic/style.css
+++ b/gnuboard5/skin/new/basic/style.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
 /* 최근게시물 스킨 (new) */
-#new_sch {margin-bottom:15px;text-align:center;padding: 20px;border: 1px solid #444;background: #111;opacity: 0.9;color:#eee;}
+#new_sch {margin-bottom:15px;text-align:center;padding: 20px;border: 1px solid #444;background:rgba(17, 17, 17, 0.9);;color:#eee;}
 #new_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
 #new_sch p {padding:5px 0 0;font-size:0.95em;text-align:center;letter-spacing:-0.1em}
 #new_sch .frm_input{border-color:#646982;border-radius:0;background: #444;color:#eee}
 #new_sch select{border:1px solid #646982;height:40px;padding:0 5px;background:#444;color:#eee}
-#new_sch select option{background: #111;color:#eee}
+#new_sch select option{background:rgba(17, 17, 17, 0.9);color:#eee}
 #new_sch .btn_submit{padding: 0 10px;height: 40px;font-size: 1.083em;font-weight: bold;color: #fff;background: #444;}
 #fnewlist .new_tit{font-weight:bold}
 #fnewlist .profile_img img{border-radius:50%}
