--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -19,7 +19,7 @@ select {margin:0}
 p {margin:0;padding:0;word-break:break-all}
 hr {display:none}
 pre {overflow-x:scroll;font-size:1.1em}
-a {color:#000;text-decoration:none}
+a {color:#fff;text-decoration:none}
 
 *, :after, :before {
     -webkit-box-sizing: border-box;
@@ -78,12 +78,12 @@ border: 1px solid #444 !important;
 .hd_sch_wr{position:absolute;top:25px;left:50%;width:430px;margin-left:-135px;}
 #hd_sch h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #hd_sch{border:2px solid #333;;border-radius:5px;overflow:hidden}
-#hd_sch #sch_stx {padding-left:10px;height:40px;width:376px;border:0;border-right:0;float:left;font-size:1.25em;background: #111;opacity: 0.9;}
+#hd_sch #sch_stx {padding-left:10px;height:40px;width:376px;border:0;border-right:0;float:left;font-size:1.25em;background:rgba(17, 17, 17, 0.9);;}
 #hd_sch #sch_submit {height:40px;border:0;background:#333;color:#eee;width:50px;float:left;cursor:pointer;font-size:18px}
 
 #sbn_side{position:absolute;top:20px;right:0}
 #classicOpenDDay{color:#eee}
-#tnb {border-bottom:1px solid #333;background:#000;opacity: 0.9;}
+#tnb {border-bottom:1px solid #333;background:#000;;}
 #tnb h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #tnb ul {margin:0 auto;zoom:1}
 #tnb ul:after {display:block;visibility:hidden;clear:both;content:""}
@@ -121,7 +121,7 @@ a.blizzard:focus, #tnb a.blizzard:hover{color:#4f4f4f;background: transparent}
 #gnb{position:relative}
 #gnb h2{position:absolute;font-size:0;line-height:0;overflow:hidden}
 #gnb .gnb_wrap{margin:0 auto;position:relative}
-#gnb #gnb_1dul {font-size:1.083em;padding: 0;background:#111;zoom:1;
+#gnb #gnb_1dul {font-size:1.083em;padding: 0;background:rgba(17, 17, 17, 0.9);zoom:1;
 -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.3);
 -moz-box-shadow:  0 1px 3px rgba(0,0,0,0.3);
 box-shadow: 0 1px 3px rgba(0,0,0,0.3)}
@@ -156,8 +156,8 @@ transition: all 0.3s ease-out;}
 .gnb_wrap .gnb_empty a{color:#fff;text-decoration:underline}
 .gnb_wrap .gnb_al_ul .gnb_empty, .gnb_wrap .gnb_al_ul .gnb_empty a{color:#555}
 
-#gnb .gnb_menu_btn{opacity: 0.9;background:#242424;color:#fff;width:50px;height:50px;border:0;vertical-align:top;font-size:18px}
-#gnb .gnb_close_btn{opacity: 0.9;background:#242424;color:#fff;width:50px;height:50px;border:0;vertical-align:top;font-size:18px;position:absolute;top:-50px;left:0}
+#gnb .gnb_menu_btn{;background:#242424;color:#fff;width:50px;height:50px;border:0;vertical-align:top;font-size:18px}
+#gnb .gnb_close_btn{;background:#242424;color:#fff;width:50px;height:50px;border:0;vertical-align:top;font-size:18px;position:absolute;top:-50px;left:0}
 #gnb .gnb_mnal{padding:0}
 
 #gnb_all{display:none;position:absolute;width:100%;z-index:99;}
@@ -176,8 +176,8 @@ box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
 #wrapper{}
 #container_wr:after {display:block;visibility:hidden;clear:both;content:""}
 #container_wr {z-index:5;margin:0 auto;height:100%;zoom:1}
-#aside {float:right;width:305px;padding:0;background: #111;opacity: 0.9;;height: 100%;border: 1px solid #444;margin:20px 0 20px 20px}
-#aside a{color:#eee;background: #111;}
+#aside {float:right;width:305px;padding:0;background:rgba(17, 17, 17, 0.9);;;height: 100%;border: 1px solid #444;margin:20px 0 20px 20px}
+#aside a{color:#eee;background:rgba(17, 17, 17, 0.9);}
 #container {z-index:4;position:relative;float:left;min-height:500px;height:auto !important;margin:20px  0;height:500px;font-size:1em;width:1075px;zoom:1}
 #container:after {display:block;visibility:hidden;clear:both;content:""}
 #container_title {font-size:1.333em;margin:0 auto;font-weight:bold;color:#eee}
@@ -187,7 +187,7 @@ box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
 .lt_wr:nth-child(2n+1){clear:both}
 .latest_wr:after {display:block;visibility:hidden;clear:both;content:""}
 /* 하단 레이아웃 */
-#ft {border-top:1px solid #444;background:#111;opacity: 0.9;;padding-bottom:30px;margin:0 auto;text-align:center}
+#ft {border-top:1px solid #444;background:rgba(17, 17, 17, 0.9);;;padding-bottom:30px;margin:0 auto;text-align:center}
 #ft h1 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #ft_wr {margin:0 auto;position:relative;}
 #ft_link{padding:15px 0;border-bottom:1px solid #eee}
@@ -281,7 +281,7 @@ a.btn_b01,.btn_b01 {display:inline-block;background:#4c4f6f;color:#fff;text-deco
 .btn_b01:hover, .btn_b01:hover {background:#54598c}
 a.btn_b02,.btn_b02 {display:inline-block;background:#4f4f4f;padding:0 10px;color:#fff;text-decoration:none;border:0;vertical-align:middle;}
 a.btn_b02:hover, .btn_b02:hover {background:#444}
-a.btn_b03, .btn_b03 {display:inline-block;background:#111;border:1px solid #444;color:#eee;text-decoration:none;vertical-align:middle}
+a.btn_b03, .btn_b03 {display:inline-block;background:rgba(17, 17, 17, 0.9);border:1px solid #444;color:#eee;text-decoration:none;vertical-align:middle}
 a.btn_b03:hover, .btn_b03:hover {background:#222}
 a.btn_b04, .btn_b04 {display:inline-block;background:#fff;border:1px solid #ccc;color:#707070;text-decoration:none;vertical-align:middle}
 a.btn_b04:hover, .btn_b04:hover {color:#333;background:#f9f9f9}
@@ -300,11 +300,11 @@ a.btn_admin,.btn_admin {display:inline-block;background:#d13f4a;color:#fff;text-
 .tbl_wrap caption {padding:10px 0;font-weight:bold;text-align:left}
 .tbl_head01 {margin:0 0 10px;color:#eee}
 .tbl_head01 caption {padding:0;font-size:0;line-height:0;overflow:hidden}
-.tbl_head01 thead th {padding:10px 0;font-weight:normal;text-align:center;border-bottom:1px solid #444;background:#111;opacity: 0.9;;height:40px}
+.tbl_head01 thead th {padding:10px 0;font-weight:normal;text-align:center;border-bottom:1px solid #444;background:rgba(17, 17, 17, 0.9);;;height:40px}
 .tbl_head01 thead th input {vertical-align:top} /* middle 로 하면 게시판 읽기에서 목록 사용시 체크박스 라인 깨짐 */
 .tbl_head01 tfoot th, .tbl_head01 tfoot td {padding:10px 0;border-top:1px solid #c1d1d5;border-bottom:1px solid #c1d1d5;background:#d7e0e2;text-align:center}
 .tbl_head01 tbody th {padding:8px 0;border-bottom:1px solid #e8e8e8}
-.tbl_head01 td {color:#eee;background:#111;opacity: 0.9;padding:10px 5px;border-top:1px solid #444;line-height:1.4em;height:60px;word-break:break-all}
+.tbl_head01 td {color:#eee;background:rgba(17, 17, 17, 0.9);;padding:10px 5px;border-top:1px solid #444;line-height:1.4em;height:60px;word-break:break-all}
 .tbl_head01 td a{color:#eee}
 .tbl_head01 tbody tr:hover td{background:#222;;;}
 .tbl_head01 a:hover {text-decoration:underline}
@@ -428,7 +428,7 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
 .pg {}
 .pg_page, .pg_current {display:inline-block;vertical-align:middle;background:#666666;border:1px solid #444}
 .pg a:focus, .pg a:hover {text-decoration:none}
-.pg_page {background:#111;color:#eee;font-size:1.083em;height:30px;line-height:28px;padding:0 5px;min-width:30px;text-decoration:none;border-radius:3px;}
+.pg_page {background:rgba(17, 17, 17, 0.9);color:#eee;font-size:1.083em;height:30px;line-height:28px;padding:0 5px;min-width:30px;text-decoration:none;border-radius:3px;}
 .pg_page:hover{background-color:#ddd;color:#111}
 .pg_start {text-indent:-999px;overflow:hidden;background:url('../img/btn_first.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
 .pg_prev {text-indent:-999px;overflow:hidden;background:url('../img/btn_prev.gif') no-repeat 50% 50% #fff;padding:0;border:1px solid #444;background-color:#666666;}
