--- a/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
@@ -40,14 +40,14 @@
 /* 설문조사 스킨 */
 #poll {margin:30px 10px }
 #poll header {position:relative;}
-#poll h2 {display:inline-block;background: #111;opacity:0.9;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
+#poll h2 {display:inline-block;background:rgba(17, 17, 17, 0.9);opacity:0.9;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
 -webkit-box-shadow: 0 0 5px #444;
 -moz-box-shadow: 0 0 5px #444;
 box-shadow: 0 0 8px #444;
 }
 #poll header .btn_admin {display:block;margin:0 0 5px;color:#fff;text-align:center;text-decoration:none;line-height:2em;vertical-align:middle}
 #poll header p {color:#eee;padding:0;font-weight:bold}
-#poll li {background:#111;opacity: 0.8;color:#eee;;margin: 8px 0;padding:10px;
+#poll li {background:rgba(17, 17, 17, 0.9);opacity: 0.8;color:#eee;;margin: 8px 0;padding:10px;
     -webkit-box-shadow: 0 1px 4px #444;
     -moz-box-shadow: 0 1px 4px #444;
     box-shadow: 0 1px 4px #444;}
