--- a/gnuboard5/theme/basic/mobile/skin/popular/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/popular/basic/style.css
@@ -2,7 +2,7 @@
 
 /* 인기검색어 */
 #popular {margin:30px 10px }
-#popular h2 {display:inline-block;background: #111;opacity: 0.9;;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
+#popular h2 {display:inline-block;background:rgba(17, 17, 17, 0.9);;;color: #fff;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
 -webkit-box-shadow: 0 0 5px #444;
 -moz-box-shadow: 0 0 5px #444;
 box-shadow: 0 0 8px #444;
