--- a/gnuboard5/theme/basic/mobile/skin/visit/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/visit/basic/style.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
 #visit {margin:30px 10px}
-#visit h2 {display:inline-block;background: #111;opacity: 0.9;;color: #eee;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
+#visit h2 {display:inline-block;background:rgba(17, 17, 17, 0.9);;;color: #eee;border-radius: 3px;line-height: 24px;padding: 0 10px;margin:0 0 10px;
 -webkit-box-shadow: 0 0 5px #444;
 -moz-box-shadow: 0 0 5px #444;
 box-shadow: 0 0 8px #444;
 }
-#visit dl{background:#111;opacity: 0.9;;padding:10px;border-radius:3px;line-height:20px;
+#visit dl{background:rgba(17, 17, 17, 0.9);;;padding:10px;border-radius:3px;line-height:20px;
 -webkit-box-shadow: 0 1px 4px #444;
    -moz-box-shadow: 0 1px 4px #444;
         box-shadow: 0 1px 4px #444;}
