--- a/gnuboard5/theme/basic/skin/latest/basic/style.css
+++ b/gnuboard5/theme/basic/skin/latest/basic/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* 새글 스킨 (latest) */
 
-.lat {position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #333;background:#111;opacity: 0.9;}
-.lat .lat_title {display:block;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #333;color:#253dbe;background:#101;opacity: 0.9;}
+.lat {position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #333;background:rgba(17, 17, 17, 0.9);;}
+.lat .lat_title {display:block;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #333;color:#253dbe;background:#101;;}
 .lat .lat_title a{color:#eee;display:inline-block;position:relative}
 .lat .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#eee;content:''}
 .lat ul{padding:15px 20px}
