--- a/gnuboard5/theme/basic/skin/latest/pic_basic/style.css
+++ b/gnuboard5/theme/basic/skin/latest/pic_basic/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* 새글 스킨 (latest) */
-.pic_lt{position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #444;background:#111;opacity: 0.9;}
-.pic_lt .lat_title {color:#eee;display:block;background:#111;opacity: 0.9;;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #444;color:#eee;}
+.pic_lt{position:relative;margin-bottom:20px;overflow:hidden;border: 1px solid #444;background:rgba(17, 17, 17, 0.9);;}
+.pic_lt .lat_title {color:#eee;display:block;background:rgba(17, 17, 17, 0.9);;;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #444;color:#eee;}
 .pic_lt .lat_title a{color:#eee;display:inline-block;position:relative}
 .pic_lt .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#eee;content:''}
 .pic_lt .lt_more {position:absolute;top:11px;right:10px;display:block;width:25px;line-height:25px;color:#aaa;border-radius:3px;text-align:center;}
