--- a/gnuboard5/theme/basic/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/skin/poll/basic/style.css
@@ -37,7 +37,7 @@
 /* ### 기본 스타일 커스터마이징 끝 ### */
 
 /* 설문조사 스킨 */
-#poll {border: 1px solid #444;color:#eee; border-bottom: 1px solid #444;background:#111;opacity: 0.9;;margin:50px 20px 20px;position:relative;
+#poll {border: 1px solid #444;color:#eee; border-bottom: 1px solid #444;background:rgba(17, 17, 17, 0.9);;;margin:50px 20px 20px;position:relative;
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 box-shadow:0 1px 2px rgba(0,0,0,0.1)}
@@ -48,7 +48,7 @@ box-shadow:0 1px 2px rgba(0,0,0,0.1)}
 #poll li {padding:5px 0}
 #poll .poll_con{}
 #poll .poll_con p{font-weight:bold;padding: 10px 15px;background: #f1f9f7;border:1px solid #e0f1e9;color: #457163;margin:10px 10px 0}
-#poll_btn{background:#111;opacity: 0.9;;padding:10px;text-align:center}
+#poll_btn{background:rgba(17, 17, 17, 0.9);;;padding:10px;text-align:center}
 #poll_btn:after {display:block;visibility:hidden;clear:both;content:""}
 #poll_btn .btn_poll{display:inline-block;height:30px;line-height:28px;padding: 0 10px}
 #poll_btn .btn_result{;display:inline-block;height:30px;line-height:30px;padding: 0 10px;font-weight:bold}
