--- a/gnuboard5/theme/basic/skin/visit/basic/style.css
+++ b/gnuboard5/theme/basic/skin/visit/basic/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* 방문자 집계 */
-#visit {color:#eee;border: 1px solid #444; border-bottom: 1px solid #444;margin:40px 20px 20px;background:#111;opacity: 0.9;;position:relative;
+#visit {color:#eee;border: 1px solid #444; border-bottom: 1px solid #444;margin:40px 20px 20px;background:rgba(17, 17, 17, 0.9);;;position:relative;
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 box-shadow:0 1px 2px rgba(0,0,0,0.1)}
