--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -138,7 +138,7 @@ box-shadow:inset 0 1px 1px rgb(39, 39, 39);
 .btn_bo_adm {float:left}
 .btn_bo_adm li {float:left;margin-right:5px}
 .btn_bo_adm input {padding:0 8px;border:0;background:#d4d4d4;color:#666;text-decoration:none;vertical-align:middle}
-.bo_notice td {background:#e6f8ff !important;border-bottom:1px solid #c3dfe8;}
+.bo_notice td {}
 .bo_notice td a {font-weight:bold;}
 
 .bo_notice .notice_icon{display:inline-block;background:#4158d1;width:25px;line-height:25px;border-radius:5px;font-weight:normal;color:#fff}
