--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -274,7 +274,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_img img {margin-bottom:20px;max-width:100%;height:auto}
 
 #bo_v_con {margin:10px 0 30px;width:100%;line-height:1.7em;min-height:200px;word-break:break-all;overflow:hidden}
-#bo_v_con a {color:#000;text-decoration:underline}
+#bo_v_con a {color:#35b3dc;text-decoration:underline}
 #bo_v_con img {max-width:100%;height:auto}
 
 #bo_v_act {margin-bottom:30px;text-align:center}
