--- a/gnuboard5/theme/basic/mobile/skin/qa/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/qa/basic/style.css
@@ -194,7 +194,7 @@ box-shadow: 0 1px 4px #cbd1df;}
 #bo_v_img img {margin-bottom:15px;max-width:100%;height:auto}
 
 #bo_v_con {margin-bottom:20px;width:100%;line-height:1.7em;word-break:break-all;overflow:hidden}
-#bo_v_con a {color:#000;text-decoration:underline}
+#bo_v_con a {color:#35b3dc;text-decoration:underline}
 #bo_v_con img {max-width:100%;height:auto}
 
 #bo_v_act {margin-bottom:20px;text-align:center}
