--- a/gnuboard5/theme/basic/skin/qa/basic/style.css
+++ b/gnuboard5/theme/basic/skin/qa/basic/style.css
@@ -249,7 +249,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #bo_v_img img {margin-bottom:20px;max-width:100%;height:auto}
 
 #bo_v_con {margin-bottom:30px;width:100%;line-height:1.7em;word-break:break-all;overflow:hidden}
-#bo_v_con a {color:#000;text-decoration:underline}
+#bo_v_con a {color:#35b3dc;text-decoration:underline}
 #bo_v_con img {max-width:100%;height:auto}
 
 #bo_v_act {margin-bottom:30px;text-align:center}
