--- a/gnuboard5/theme/basic/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/skin/poll/basic/style.css
@@ -93,9 +93,9 @@ box-shadow:0 1px 2px rgba(0,0,0,0.1)}
 
 .poll_cmt_del a {display:inline-block;margin-left:5px;color:#49857c;font-size:15px;}
 .poll_cmt_del a:hover{color:#98ca69}
-#poll_result_oth {padding:0 0 30px}
+#poll_result_oth {padding:0 0 30px;color:#eee}
 #poll_result_oth h2 {padding:0 0 10px}
-#poll_result_oth ul {margin:0;padding:0;list-style:none;border:1px solid #ddd;background:#fff;border-top:0}
+#poll_result_oth ul {margin:0;padding:0;list-style:none;border:1px solid #ddd;background:rgba(17, 17, 17, 0.9);;border-top:0}
 #poll_result_oth ul li{border-top:1px solid #ddd; position:relative;line-height:20px}
 #poll_result_oth a {display:block;padding: 10px}
 #poll_result_oth li span{position:absolute;bottom:10px;right:15px;color:#777;font-size:0.92em;font-style:italic}
