--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -160,17 +160,21 @@ transition: all 0.3s ease-out;}
 #gnb .gnb_close_btn{;background:#242424;color:#fff;width:50px;height:50px;border:0;vertical-align:top;font-size:18px;position:absolute;top:-50px;left:0}
 #gnb .gnb_mnal{padding:0}
 
-#gnb_all{display:none;position:absolute;width:100%;z-index:99;}
+#gnb_all{display:none;position:absolute;width:100%;z-index:99;
+    background-image: url(/img/map.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 #gnb_all .gnb_al_ul:after {display:block;visibility:hidden;clear:both;content:""}
-#gnb_all .gnb_al_ul{background:#fff;border:1px solid #242424;padding:20px;
--webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
--moz-box-shadow:  0 2px 5px rgba(0,0,0,0.2);
-box-shadow: 0 2px 5px rgba(0,0,0,0.2);}
-#gnb_all .gnb_al_li{background:#fff;float:left;min-width:20%;padding:5px }
-#gnb_all .gnb_al_li .gnb_al_a{font-size:1.083em;padding:10px;display:block;position:relative;margin-bottom:10px;background: #eff1f9;border-bottom: 1px solid #dee2f1;font-weight: bold;color:#243071}
+#gnb_all .gnb_al_ul{background-color: rgba(0, 0, 0, 0.9);border:1px solid #242424;padding:20px;-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.2);-moz-box-shadow:  0 2px 5px rgba(0,0,0,0.2);box-shadow: 0 2px 5px rgba(0,0,0,0.2);/* background-image: url(/img/map.jpg); *//* background-size: cover; *//* background-repeat: no-repeat; *//* background-position: center; */}
+#gnb_all .gnb_al_li{float:left;min-width:20%;padding:5px;/* background: rgba(0,0,0,0.8); */}
+#gnb_all .gnb_al_li .gnb_al_a{font-size:1.083em;padding:10px;display:block;position:relative;margin-bottom:10px;background: rgba(45, 45, 45, 0.9);border-bottom: 1px solid #444;font-weight: bold;color:#eee;border-radius: 6px;}
 #gnb_all .gnb_al_li li {padding-left:10px;line-height:2em}
+#gnb_all .gnb_al_li li:hover{text-decoration: underline}
 #gnb_all .gnb_al_li li i{color:#9ca6cc}
-#gnb_all .gnb_al_li li a{color:#555}
+#gnb_all .gnb_al_li li a{color:#eee}
+#gnb_all .gnb_al_li li a:hover{color:#ddd;text-decoration: underline}
 
 /* 중간 레이아웃 */
 #wrapper{}
