--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -44,7 +44,7 @@ ul{list-style:none;}
 #logo {padding:10px 10px;height:50px;text-align:center}
 #logo img{vertical-align:middle;max-height:100%;width:auto}
 #gnb_open {position:absolute;top:10px;left:10px;padding:0 10px;height:30px;width:30px;border:0;background-size:70%;color:#fff;background:none; font-size: 16px;}
-#gnb {display:none;background:rgba(17, 17, 17, 0.9);position:fixed;top:0;left:0;z-index:99999;height:100%;overflow-y:auto;width:300px;
+#gnb {display:none;background:rgba(17, 17, 17);position:fixed;top:0;left:0;z-index:99999;height:100%;overflow-y:auto;width:300px;
 -webkit-box-shadow:0 0 5px  rgba(55,55,5,0.4);
 -moz-box-shadow:0 0 5px  rgba(55,55,5,0.4);
 box-shadow: 0 0 5px  rgba(55,55,5,0.4);}
