--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -286,9 +286,9 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_act .bo_v_nogood{display:inline-block;border:1px solid #444;width:70px;height:70px;padding-top:40px;background:url(./img/icon_bad.png) 25px 18px no-repeat;border-radius:50%;font-style:italic;background-color:#555}
 
 #bo_v_share{position:relative;margin:20px 0;text-align:right}
-#bo_v_share .btn{padding:0 10px 0 0;color:#555;font-weight:normal;font-size:1em ;line-height:30px;height:32px;border-radius:0;border-color:#d5d5d5}
-#bo_v_share .btn:hover{background:#fff}
-#bo_v_share .btn i{margin-right:5px;background:#eee;color:#333;text-align:center;width:30px;line-height:30px;vertical-align:top;}
+#bo_v_share .btn{padding:0 10px 0 0;color:#eee;font-weight:normal;font-size:1em ;line-height:30px;height:32px;border-radius:0;border-color:#222}
+#bo_v_share .btn:hover{background:#444}
+#bo_v_share .btn i{margin-right:5px;background:#444;color:#eee;text-align:center;width:30px;line-height:30px;vertical-align:top;}
 #bo_v_share .btn_share{}
 #bo_v_share .btn_share:hover{}
 
