--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -175,17 +175,22 @@ transition: all 0.3s ease-out;}
 #gnb_all .gnb_al_li li i{color:#9ca6cc}
 #gnb_all .gnb_al_li li a{color:#eee}
 #gnb_all .gnb_al_li li a:hover{color:#ddd;text-decoration: underline}
-
+/* 좌측 메뉴 */
+#left_navi{ float:left;width:200px;margin:20px;margin-left:0;background:rgba(17, 17, 17, 0.9);color:#eee; border:1px solid #444;}
+#left_navi ul{width:100%}
+#left_navi ul li {padding:5px;width:100%;}
+#left_navi ul li a{background:rgba(209, 63, 74, 0.9);padding:5px;border-radius:3px;display: block;width:100%}
+#left_navi ul li ul li a{background: transparent}
 /* 중간 레이아웃 */
 #wrapper{}
 #container_wr:after {display:block;visibility:hidden;clear:both;content:""}
 #container_wr {z-index:5;margin:0 auto;height:100%;zoom:1}
-#aside {float:right;width:305px;padding:0;background:rgba(17, 17, 17, 0.9);;;height: 100%;border: 1px solid #444;margin:20px 0 20px 20px}
+#aside {float:right;width:275px;padding:0;background:rgba(17, 17, 17, 0.9);;;height: 100%;border: 1px solid #444;margin:20px 0 20px 20px}
 #aside a{color:#eee;}
 #aside a.bx-prev, #aside a.bx-next, #aside a.btn_b04{background:rgba(17, 17, 17, 0.9);border:1px solid #444}
 
 #aside div.sns-wrap a{background-color: rgba(17, 17, 17, 0.9);;}
-#container {z-index:4;position:relative;float:left;min-height:500px;height:auto !important;margin:20px  0;height:500px;font-size:1em;width:1075px;zoom:1}
+#container {z-index:4;position:relative;float:left;min-height:500px;height:auto !important;margin:20px  0;height:500px;font-size:1em;width:880px;zoom:1;}
 #container:after {display:block;visibility:hidden;clear:both;content:""}
 #container_title {font-size:1.333em;margin:0 auto;font-weight:bold;color:#eee}
 #container_title span{margin:0 auto 10px;display:block;line-height:30px;}
@@ -311,7 +316,7 @@ a.btn_admin,.btn_admin {display:inline-block;background:#d13f4a;color:#fff;text-
 .tbl_head01 thead th input {vertical-align:top} /* middle 로 하면 게시판 읽기에서 목록 사용시 체크박스 라인 깨짐 */
 .tbl_head01 tfoot th, .tbl_head01 tfoot td {padding:10px 0;border-top:1px solid #c1d1d5;border-bottom:1px solid #c1d1d5;background:#d7e0e2;text-align:center}
 .tbl_head01 tbody th {padding:8px 0;border-bottom:1px solid #e8e8e8}
-.tbl_head01 td {color:#eee;background:rgba(17, 17, 17, 0.9);;padding:10px 5px;border-top:1px solid #444;line-height:1.4em;height:60px;word-break:break-all}
+.tbl_head01 td {color:#eee;background:rgba(17, 17, 17, 0.9);;padding:10px 5px;border-top:1px solid #444;line-height:20px;min-height:40px;word-break:break-all}
 .tbl_head01 td a{color:#eee}
 .tbl_head01 tbody tr:hover td{background:#222;;;}
 .tbl_head01 a:hover {text-decoration:underline}
