--- a/gnuboard5/theme/basic/skin/latest/basic/style.css
+++ b/gnuboard5/theme/basic/skin/latest/basic/style.css
@@ -5,9 +5,10 @@
 .lat .lat_title {display:block;padding:0 20px;line-height:45px;font-size:1.083em;border-bottom:1px solid #333;color:#253dbe;background:#101;;}
 .lat .lat_title a{color:#eee;display:inline-block;position:relative}
 .lat .lat_title a:after{position:absolute;bottom:-1px;left:0;width:100%;height:2px;background:#eee;content:''}
-.lat ul{padding:15px 20px}
-.lat li {position:relative;line-height:18px;padding:3px 0;padding-right:50px;padding-left:10px}
-
+.lat ul{padding:10px 10px}
+.lat li {position:relative;line-height:18px;padding:3px 0;padding-right:0px;padding-left:0px}
+.lat li div.lt_info{color:#999;font-size:0.9em}
+.lat li div.lt_info a{color: #999}
 /* .lat li:before{position: absolute;top: 12px;left: 0px;width: 4px;height: 4px;background: #aaa;content: '';border-radius: 50%;} */
 .lat li a{color:#fff}
 .lat li a.bo_cate_link{color:#47aef3}
