--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -2,7 +2,7 @@
 
 /* 초기화 */
 html {overflow-y:scroll;height:100%;min-width:320px}
-body {margin:0;padding:0;font-size:0.75em;background: url(/img/bg.jpg);height:100%}
+body {margin:0;padding:0;font-size:0.75em;background: url(/img/bg.jpg);height:100%;background-color: rgba(17, 17, 17, 0.9)}
 html, h1, h2, h3, h4, h5, h6, form, fieldset, img {margin:0;padding:0;border:0}
 h1, h2, h3, h4, h5, h6 {font-size:1em}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block}
@@ -276,7 +276,7 @@ a.btn_admin:focus, a.btn_admin:hover {}
 
 /* 새창 기본 스타일 */
 .new_win {}
-.new_win #win_title {font-size: 1.2em;font-weight: bold;height: 50px;padding: 10px;line-height: 30px;background: #4162ff;color: #fff;}
+.new_win #win_title {font-size: 1.2em;font-weight: bold;height: 50px;padding: 10px;line-height: 30px;background:rgba(17,17,17,0.9); color: #fff;}
 .new_win #win_title .sv {font-size:0.75em;line-height:1.2em}
 .new_win_con{margin:10px}
 
