--- a/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
@@ -81,7 +81,7 @@ box-shadow: 0 0 8px #444;
 .poll_result_graph span:hover .poll_cnt {display:block;white-space: nowrap;}
 .poll_result_graph span .poll_cnt:before{content: "";position: absolute;top: -6px;left: 50%;margin-left:-4px;width: 0;height: 0;border-style: solid;border-width: 0 4px 6px 4px;border-color: transparent transparent #333 transparent;}
 #poll_result_cmt {}
-#poll_result_cmt h2 {;font-size:1.083em;}
+#poll_result_cmt h2 {font-size:1.083em;}
 #poll_result_cmt h3 {margin:0;font-size:1.083em;padding: 0 0 15px;margin:0 0 15px;border-bottom:1px solid #ddd;text-align:center;}
 #poll_result_cmt article {margin:15px 0 ;position:relative;}
 #poll_result_cmt h2 {position:absolute;margin:0;padding:0;border:0;font-size:0;text-indent:-9999em;line-height:0;overflow:hidden}
@@ -96,7 +96,7 @@ box-shadow: 0 0 8px #444;
 
 .poll_cmt_del a {display:inline-block;margin-left:5px;color:#49857c;font-size:16px;}
 .poll_cmt_del a:hover{color:#98ca69}
-#poll_result_oth {padding:0}
+#poll_result_oth {padding:0;color:#eee}
 #poll_result_oth ul {margin:0;padding:0;list-style:none;}
 #poll_result_oth li{position:relative}
 #poll_result_oth li:after {display:block;visibility:hidden;clear:both;content:""}
