현재 접속자 배경변경

--- a/gnuboard5/mobile/skin/connect/basic/style.css
+++ b/gnuboard5/mobile/skin/connect/basic/style.css
@@ -7,7 +7,7 @@
 #current_connect li:nth-child(2n+1){clear:both}
 #current_connect .crt_name {padding:20px 0;display:block}
 #current_connect .crt_name img{ border-radius:50%;margin: 0 0 5px}
-#current_connect .crt_wr{background:rgba(17,17,17,0.9);position:relative;
+#current_connect .crt_wr{background:rgba(17,17,17,0.9);position:relative;color:#eee;
 -webkit-box-shadow: 0 1px 4px #444;
    -moz-box-shadow: 0 1px 4px #444;
         box-shadow: 0 1px 4px #444;}
