--- a/gnuboard5/skin/faq/basic/style.css
+++ b/gnuboard5/skin/faq/basic/style.css
@@ -6,7 +6,7 @@
 #bo_cate li {display:inline-block;}
 #bo_cate a {display:block;border:1px solid #dadada;background:#fff;margin:0 0 5px 0;line-height:30px;padding:0 10px;border-radius:3px}
 #bo_cate a:focus, #bo_cate a:hover, #bo_cate a:active {text-decoration:none;background:#f3f3f3}
-#bo_cate #bo_cate_on {z-index:2;border:1px solid #253dbe;color:#253dbe;font-weight:bold}
+#bo_cate #bo_cate_on {z-index:2;border:1px solid #444;color:#eee;background:#666;font-weight:bold}
 
 #faq_wrap {margin:10px 0 30px}
 #faq_wrap h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
@@ -20,8 +20,8 @@
 #faq_con .con_inner .closer_btn{height:25px;font-size:0.92em;display:inline-block;padding:0 5px;border-radius:5px;}
 #faq_con .con_closer{text-align:right}
 
-#faq_sch {text-align:center;border:1px solid #ccc;background:#fff;;padding:30px;margin:10px 0}
+#faq_sch {text-align:center;border:1px solid #444;background:rgba(17,17,17,0.9);;padding:30px;margin:10px 0}
 #faq_sch form{display:inline-block;position:relative}
 #faq_sch .sch_tit{font-size:20px;font-weight:bold;display:inline-block;margin-right:10px;vertical-align:middle}
 #faq_sch .frm_input{border-color:#646982;border-radius:0;width:300px}
-#faq_sch .btn_submit{padding:0 10px;height:40px;color:#000;font-size:1.083em;font-weight:bold;color:#fff;background:#253dbe;}
+#faq_sch .btn_submit{padding:0 10px;height:40px;color:#000;font-size:1.083em;font-weight:bold;color:#fff;background:#444;}
