모바일 흰글씨 처리 불가영역 처리

--- a/gnuboard5/mobile/skin/search/basic/style.css
+++ b/gnuboard5/mobile/skin/search/basic/style.css
@@ -18,12 +18,13 @@
 
 #sch_res_board  {margin: 10px;padding-left:1px;zoom:1}
 #sch_res_board:after {display:block;visibility:hidden;clear:both;content:""}
-#sch_res_board li {display:inline-block;float:left;margin:3px 5px 3px 0}
-#sch_res_board a {display:block;line-height:24px;border-radius:13px;padding:0 10px;background:#fff}
-#sch_res_board .sch_on {background:#4162ff;color:#fff;
--webkit-box-shadow:0 0 5px  rgba(65,98,255,0.8);
--moz-box-shadow:0 0 5px  rgba(65,98,255,0.8);
-box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
+#sch_res_board li {display:inline-block;float:left;margin:3px 5px 3px 0;}
+#sch_res_board a {display:block;line-height:24px;border-radius:13px;padding:0 10px;background:#aaa;color:#eee}
+#sch_res_board .sch_on {background:rgba(17,17,17,0.9);color:#fff;
+-webkit-box-shadow:0 0 5px  #444;
+-moz-box-shadow:0 0 5px  #444;
+box-shadow: 0 0 8px #444;
+}
 
 
 .sch_res_list {margin:0 0 10px;padding:10px 0}
@@ -35,9 +36,9 @@ box-shadow: 0 0 8px  rgba(65,98,255,0.8);}
 .sch_res_info{line-height:28px;border-top:1px solid #eee;padding:3px 0 0;margin: 10px 0 0;color:#666 }
 .sch_res_info:after {display:block;visibility:hidden;clear:both;content:""}
 .sch_res_new{position:absolute;top:10px;right:0;font-size:0.92em;color:#777;width:20px;height:20px;line-height:20px;display:block;background:#eee;text-align:center}
-.sch_res_list p {margin:0 0 10px;line-height:1.4em;color:#777;font-size:0.92em}
+.sch_res_list p {margin:0 0 10px;line-height:1.4em;color:#eee;font-size:0.92em}
 .sch_more {padding:0 0 30px;font-size:0.92em;text-align:right }
-.sch_more a{;color:#f2664f}
+.sch_more a{color:#f2664f}
 .sch_more  i{font-size:13px}
-.sch_datetime{float:right;font-style:italic}
+.sch_datetime{float:right;font-style:italic;color:#eee}
 .sch_res_info .profile_img img{border-radius:50%}
