--- a/gnuboard5/theme/basic/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/skin/poll/basic/style.css
@@ -57,15 +57,16 @@ box-shadow:0 1px 2px rgba(0,0,0,0.1)}
 /* 설문조사 결과 (새창) */
 #poll_result {}
 #poll_result section {margin:0 0 20px;padding:25px;border:1px solid #dbdbdb;background:#fff;
--webkit-box-shadow: 0 0 5px rgba(55,55,5,0.1));
-   -moz-box-shadow: 0 0 5px rgba(55,55,5,0.1));
+-webkit-box-shadow: 0 0 5px rgba(55,55,5,0.1);
+   -moz-box-shadow: 0 0 5px rgba(55,55,5,0.1);
         box-shadow: 0 0 5px rgba(55,55,5,0.1); }
 #poll_result .tbl_wrap {margin:0}
 #poll_result h2 {}
 #poll_result a {}
 #poll_result .sv_member,
 #poll_result .sv_guest {font-weight:bold}
-#poll_result .poll_all{float:right;display:inline-block;margin:0 0 10px;line-height: 30px;font-size: 0.92em;color: #4e546f;background: #d4d4d4;padding: 0 10px;border-radius: 5px;}
+#poll_result .poll_all{min-width:80px;float:right;display:inline-block;margin:0 0 10px;line-height: 30px;font-size: 0.92em;color: #4e546f;background: #d4d4d4;padding: 0 10px;border-radius: 5px;}
+#poll_result .poll_home{text-align: center;min-width:80px;float:right;display:inline-block;margin:0 0 10px;margin-right:10px;line-height: 30px;font-size: 0.92em;color: #4e546f;background: #d4d4d4;padding: 0 10px;border-radius: 5px;}
 #poll_result_list {margin:0 auto 20px;clear:both}
 #poll_result_list h2 {margin:0;font-size:1.25em;padding: 0 0 15px;margin:0 0 15px;border-bottom:1px solid #ddd;text-align:center;}
 #poll_result_list dt {margin-right:5%;color:#e8180d;text-align:right}
