--- a/gnuboard5/skin/member/basic/style.css
+++ b/gnuboard5/skin/member/basic/style.css
@@ -105,17 +105,18 @@ position:absolute;z-index:-1;top:2%;bottom:0;left:10px;right:10px;
 /* ### 기본 스타일 커스터마이징 끝 ### */
 
 /* 회원가입 약관 */
-#fregister p{text-align:center;color: #c7254e;background: #f9f2f4;padding:10px;border:1px solid #ecc7d2;margin:0 0 5px}
-#fregister section {;margin:10px auto 30px;border:1px solid #dbdbdb;position:relative;border-radius:3px 3px 0 0 ;
+#fregister{color:#eee}
+#fregister p{text-align:center;color: #c7254e;background: rgba(17, 17, 17, 0.9);padding:10px;border:1px solid #444;margin:0 0 5px}
+#fregister section {margin:10px auto 30px;border:1px solid #444;position:relative;border-radius:3px 3px 0 0 ;background: rgba(17, 17, 17, 0.9);color:#eee;
 -webkit-box-shadow:  0 1px 3px #eee;
 -moz-box-shadow:  0 1px 3px #eee;
 box-shadow: 0 1px 3px #eee;
 }
 #fregister_chkall{text-align:right}
-#fregister h2 {text-align:left;padding:15px 20px;border-bottom:1px solid #dbdbdb;background:#f8f8f8}
-#fregister textarea {display:block;padding:20px;width:100%;height:150px;background:#fff;border:0;line-height:1.6em}
-#fregister .fregister_agree {position:absolute;top:0;right:0;;padding:15px}
-#fregister_private div{padding:20px;background:#fff}
+#fregister h2 {text-align:left;padding:15px 20px;border-bottom:1px solid #444;}
+#fregister textarea {display:block;padding:20px;width:100%;height:150px;background:transparent ;color:#eee;border:0;line-height:1.6em;};
+#fregister .fregister_agree {position:absolute;top:0;right:0;;padding:15px;}
+#fregister_private div{padding:20px;color:#eee;}
 #fregister_private table{width:100%;border-collapse:collapse}
 #fregister_private table caption {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #fregister_private table  th{background:#646982;width:33.33%;color:#fff;padding:10px;border:1px solid #555971}
