--- a/gnuboard5/mobile/skin/social/style.css
+++ b/gnuboard5/mobile/skin/social/style.css
@@ -64,7 +64,7 @@
 
 /*로그인 */
 #sns_login{border:0;margin-top:15px;padding:0; border-top:1px solid #edeaea}
-#sns_login h3{padding: 0;font-weight:bold;color:#888;text-align:center}
+#sns_login h3{padding: 0;font-weight:bold;color:#eee;text-align:center}
 #sns_login .sns-icon{display:block;height:40px;line-height:40px;width:100%;margin:0 0 5px;padding-left:40px;text-align:left;color:#fff;border-radius:2px}
 #sns_login .sns-naver{background-color:#1fc800;background-position:5px 5px;border-bottom:1px solid #1ea505}
 #sns_login .sns-kakao{background-color:#ffeb00;background-position:5px 5px;border-bottom:1px solid #e2c10a}
@@ -76,7 +76,7 @@
 #sns_login .txt{text-align:left;padding-left:10px;border-left:1px solid rgba(0,0,0,0.1);display:block;font-weight:bold}
 
 /*회원가입 */
-#sns_register{margin:0 0 10px;padding:0;text-align:center;background: rgba(17,17,17,0.9);border: 1px solid #dbdbdb;
+#sns_register{margin:0 0 10px;padding:0;text-align:center;background: rgba(17,17,17,0.9);border: 1px solid #444;color:#eee;
 -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
 -moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
 box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
