검색 폰트 색깔 변경

--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -78,7 +78,7 @@ border: 1px solid #444 !important;
 .hd_sch_wr{position:absolute;top:25px;left:50%;width:430px;margin-left:-135px;}
 #hd_sch h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #hd_sch{border:2px solid #333;;border-radius:5px;overflow:hidden}
-#hd_sch #sch_stx {padding-left:10px;height:40px;width:376px;border:0;border-right:0;float:left;font-size:1.25em;background:rgba(17, 17, 17, 0.9);;}
+#hd_sch #sch_stx {color:#eee;padding-left:10px;height:40px;width:376px;border:0;border-right:0;float:left;font-size:1.25em;background:rgba(17, 17, 17, 0.9);;}
 #hd_sch #sch_submit {height:40px;border:0;background:#333;color:#eee;width:50px;float:left;cursor:pointer;font-size:18px}
 
 #sbn_side{position:absolute;top:20px;right:0}
