전체 검색 더보기 버튼 수정

--- a/gnuboard5/skin/search/basic/style.css
+++ b/gnuboard5/skin/search/basic/style.css
@@ -50,4 +50,4 @@ box-shadow:inset 0 2px 5px rgb(33, 135, 202);}
 .sch_res_list .profile_img img{border-radius:50%}
 .sch_res_list .sch_datetime{float:right;}
 .sch_more {text-align:right;margin:10px 0 30px}
-.sch_more a{display:inline-block;color:#f2664f}
+.sch_more a{display:inline-block;color:#fff;background: rgba(17,17,17,0.9);padding:5px 10px;border-radius: 3px}
